--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,12 @@ npm-debug.log
 yarn-error.log
 testem.log
 /typings
+.DS_Store
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # System Files
 .DS_Store
